tests/algorithms/x/Java/data_structures/binary_tree/mirror_binary_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden191_mirror_binary_tree3513360125/001/Main.java:42: error: method concat in class Main cannot be applied to given types;
        return concat(concat(left_vals, new int[]{tree.values[idx]}), right_vals);
                      ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
1 error
